--- a/src/components/common/CustomCarousel/style.css
+++ b/src/components/common/CustomCarousel/style.css
@@ -1,18 +1,18 @@
-.cs-slider-container {
+.carousel-container {
   height: 100%;
   width: 100%;
   position: relative;
   overflow: hidden;
 }
 
-.cs-slider-img-container {
+.carousel-img-container {
   width: 100%;
   height: 100%;
   display: flex;
   /* transition: transform 0.5s ease-in-out; */ /* commented because slider was not working as an infinite carousel with circular motion  */
 }
 
-.cs-slider-img {
+.carousel-img {
   min-width: 100%; /* i am showing single image in full screen so i was using width:100% and it was not working */
   height: 100%;
   display: flex;
@@ -20,13 +20,13 @@
   align-items: center;
 }
 
-.cs-slider-img img {
+.carousel-img img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-.cs-slider-icon {
+.carousel-icon {
   width: 40px;
   height: 40px;
   padding: 10px;
@@ -41,22 +41,22 @@
   z-index: 1;
 }
 
-.cs-slider-right-icon {
+.carousel-right-icon {
   right: 10px;
 }
 
-.cs-slider-left-icon {
+.carousel-left-icon {
   left: 10px;
 }
 
-.cs-slider-indicator {
+.carousel-indicator {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
   bottom: 12px;
 }
 
-.cs-slider-indicator > button {
+.carousel-indicator > button {
   width: 12px;
   height: 12px;
   margin-right: 12px;
@@ -68,10 +68,10 @@
   cursor: pointer;
 }
 
-.cs-slider-indicator > button:last-child {
+.carousel-indicator > button:last-child {
   margin-right: 0;
 }
 
-.cs-slider-indicator > button:hover {
+.carousel-indicator > button:hover {
   scale: 1.2;
 }
