--- a/src/components/HomePage/TopTrending/style.css
+++ b/src/components/HomePage/TopTrending/style.css
@@ -26,8 +26,8 @@
 }
 
 .trending-product-images {
-  width: 250px;
-  height: 300px;
+  /* width: 250px;
+  height: 333px; */
   object-fit: cover;
   box-shadow: var(--shadow-primary);
   margin-bottom: 20px;
@@ -35,7 +35,7 @@
   overflow: hidden;
 }
 
-@media screen and (max-width: 500px) {
+/* @media screen and (max-width: 500px) {
   .trending-product-images {
     width: 190px;
     height: 230px;
@@ -52,6 +52,6 @@
 @media screen and (max-width: 385px) {
   .trending-product-images {
     width: 250px;
-    height: 300px;
+    height: 333px;
   }
-}
+} */
